# VoiceRecorder

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/jni/: BuildOgg.cmake  BuildOpus.cmake  BuildOpusfile.cmake  CMakeLists.txt  voice.c
app/jni/cmake/: ReadVariables.cmake
app/src/androidTest/java/com/test/voicerecorder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/test/voicerecorder/: MainActivity.kt
app/src/main/java/com/test/voicerecorder/audiofx/: AudioEnhancer.kt
app/src/main/java/com/test/voicerecorder/codec/: Opus.kt  SoLoader.kt
app/src/main/java/com/test/voicerecorder/io/: AudioBuffer.kt  BaseThread.kt  BufferPool.kt  CancellableRunnable.kt
app/src/main/java/com/test/voicerecorder/legacy/: UI.kt
app/src/main/java/com/test/voicerecorder/model/: TGAudio.kt
app/src/main/java/com/test/voicerecorder/ui/: Color.kt  MainActivity.kt  Theme.kt  Type.kt
app/src/main/java/com/test/voicerecorder/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/test/voicerecorder/voice/: TGAudio.kt  VoicePlayer.java  VoicePlayer.kt  VoiceRecorder.java  VoiceRecorder.kt
app/src/test/java/com/test/voicerecorder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
